# pecac

./: CHANGELOG.md  LICENSE  README.md  pecac.cabal
eval/: .gitignore  README.md  ansatz_gen.py  ansatz_setup.py  ansatz_stats.py
exe/CircViewer/: CmdLn.hs  Main.hs
exe/CutoffViewer/: CmdLn.hs  Main.hs
exe/CycloInst/: CmdLn.hs  Main.hs
exe/LPhase/: CmdLn.hs  Main.hs
exe/PPec/: CmdLn.hs  Main.hs
exe/Parser/: CmdLn.hs  Main.hs
exe/Pec/: CmdLn.hs  Main.hs
exe/Reparam/: CmdLn.hs  Main.hs
src/Pecac/Pecac/: Affine.hs  Cyclotomic.hs  Either.hs  List.hs  Maybe.hs  Rational.hs
src/Pecac/Pecac/Analyzer/: Cutoffs.hs  Gate.hs  Integrality.hs  Problem.hs  Revolution.hs
src/Pecac/Pecac/Parser/: FDecl.hs  Gate.hs  Lexer.x  Parser.y  Problem.hs  Revolution.y  Syntax.hs
src/Pecac/Pecac/Printer/: Expr.hs  FDecl.hs  Gate.hs  GateSummary.hs  General.hs  Problem.hs  Stmt.hs
src/Pecac/Pecac/Verifier/: CycloCircuit.hs  CycloGate.hs  Matrix.hs  MatrixGate.hs  PEC.hs
src/PecacExe/PecacExe/: CmdLnFlags.hs  CmdLnParser.hs  ErrorLogging.hs  IOUtils.hs
test/: Affine-Tests.hs  Analyzer-Cutoffs-Tests.hs  Analyzer-Integrality-Tests.hs  Analyzer-Problem-Tests.hs  Analyzer-Revolution-Tests.hs  Cyclotomic-Tests.hs  Parser-FDecl-Tests.hs  Parser-Gate-Tests.hs  Parser-Parser-Tests.hs  Parser-Problem-Tests.hs  Parser-Revolution-Tests.hs  Printer-Expr-Tests.hs  Printer-Gate-Tests.hs  Printer-GateSummary-Tests.hs  Printer-Problem-Tests.hs  Printer-Stmt-Tests.hs  Verifier-CycloCircuit-Tests.hs  Verifier-CycloGate-Tests.hs  Verifier-Matrix-Tests.hs  Verifier-MatrixGate-Tests.hs  Verifier-PEC-Tests.hs
