cabal-version:       2.2

name:                pecac
version:             0.1.0.0
synopsis:            Parameterized equivalence checking for (quantum) ansatz circuits.
-- description:
license:             MIT
license-file:        LICENSE
author:              Scott Wesley
maintainer:          scott.wesley@dal.ca
-- copyright:
category:            Quantum
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

-----------------------------------------------------------------------------------------
-- Main library.

library
  exposed-modules:     Pecac.Either
                       Pecac.List
                       Pecac.Maybe
                       Pecac.Affine
                       Pecac.Analyzer.Cutoffs
                       Pecac.Analyzer.Gate
                       Pecac.Analyzer.Problem
                       Pecac.Analyzer.Revolution
                       Pecac.Parser.Gate
                       Pecac.Parser.Parser
                       Pecac.Parser.Problem
                       Pecac.Parser.Revolution
                       Pecac.Parser.Syntax
                       Pecac.Printer.Expr
                       Pecac.Printer.Gate
                       Pecac.Printer.General
                       Pecac.Printer.Stmt
                       Pecac.Verifier.CycloCircuit
                       Pecac.Verifier.CycloGate
                       Pecac.Verifier.Matrix
                       Pecac.Verifier.MatrixGate
                       Pecac.Verifier.PEC
  other-modules:       Pecac.Parser.Lexer
  build-tool-depends:  happy:happy,
                       alex:alex
  build-depends:       base,
                       array,
                       containers,
                       cyclotomic,
                       filepath,
                       groups,
                       matrix,
                       -- Forces a resolution to a dependency conflict.
                       vector>=0.12.2.0,
                       primitive>=0.7.1.0,
  hs-source-dirs:      src/Pecac
  default-language:    Haskell2010

-----------------------------------------------------------------------------------------
-- Executables.

library pecac-exe
  exposed-modules:     PecacExe.CmdLnFlags
                       PecacExe.CmdLnParser
                       PecacExe.ErrorLogging
                       PecacExe.IOUtils
  build-depends:       base,
                       cmdargs,
                       directory,
                       pecac
  hs-source-dirs:      src/PecacExe
  default-language:    Haskell2010

common basic-exe-props
  hs-source-dirs:      exe
  default-language:    Haskell2010
  build-depends:       base,
                       pecac,
                       pecac-exe

executable pecac_exact
  import:              basic-exe-props
  main-is:             Pec/Main.hs
  other-modules:       Pec.CmdLn

executable pecac_parse
  import:              basic-exe-props
  main-is:             Parser/Main.hs
  other-modules:       Parser.CmdLn
  build-depends:       pretty-simple

executable pecac_circviewer
  import:              basic-exe-props
  main-is:             CircViewer/Main.hs
  other-modules:       CircViewer.CmdLn

executable pecac_cutoffviewer
  import:              basic-exe-props
  main-is:             CutoffViewer/Main.hs
  other-modules:       CutoffViewer.CmdLn

executable pecac_cycloinst
  import:              basic-exe-props
  main-is:             CycloInst/Main.hs
  other-modules:       CycloInst.CmdLn

-----------------------------------------------------------------------------------------
-- Unit Testing.

common basic-unit-test-props
  hs-source-dirs:      test
  default-language:    Haskell2010
  build-depends:       base,
                       test-framework,
                       test-framework-hunit,
                       HUnit,
                       pecac

test-suite affine-tests
  import:              basic-unit-test-props
  main-is:             Affine-Tests.hs
  build-depends:       groups
  type:                exitcode-stdio-1.0

test-suite analyzer-cutoffs-tests
  import:              basic-unit-test-props
  main-is:             Analyzer-Cutoffs-Tests.hs
  type:                exitcode-stdio-1.0

test-suite analyzer-revolution-tests
  import:              basic-unit-test-props
  main-is:             Analyzer-Revolution-Tests.hs
  type:                exitcode-stdio-1.0

test-suite parser-parser-tests
  import:              basic-unit-test-props
  main-is:             Parser-Parser-Tests.hs
  type:                exitcode-stdio-1.0

test-suite parser-problem-tests
  import:              basic-unit-test-props
  main-is:             Parser-Problem-Tests.hs
  type:                exitcode-stdio-1.0

test-suite parser-revolution-tests
  import:              basic-unit-test-props
  main-is:             Parser-Revolution-Tests.hs
  type:                exitcode-stdio-1.0

test-suite parser-gate-tests
  import:              basic-unit-test-props
  main-is:             Parser-Gate-Tests.hs
  type:                exitcode-stdio-1.0

test-suite printer-expr-tests
  import:              basic-unit-test-props
  main-is:             Printer-Expr-Tests.hs
  type:                exitcode-stdio-1.0

test-suite printer-gate-tests
  import:              basic-unit-test-props
  main-is:             Printer-Gate-Tests.hs
  type:                exitcode-stdio-1.0

test-suite printer-stmt-tests
  import:              basic-unit-test-props
  main-is:             Printer-Stmt-Tests.hs
  type:                exitcode-stdio-1.0

test-suite verifier-cyclocircuit-tests
  import:              basic-unit-test-props
  main-is:             Verifier-CycloCircuit-Tests.hs
  build-depends:       cyclotomic,
                       -- Forces a resolution to a dependency conflict.
                       vector>=0.12.2.0,
                       primitive>=0.7.1.0
  type:                exitcode-stdio-1.0

test-suite verifier-cyclogate-tests
  import:              basic-unit-test-props
  main-is:             Verifier-CycloGate-Tests.hs
  build-depends:       cyclotomic,
                       -- Forces a resolution to a dependency conflict.
                       vector>=0.12.2.0,
                       primitive>=0.7.1.0
  type:                exitcode-stdio-1.0

test-suite verifier-matrix-tests
  import:              basic-unit-test-props
  main-is:             Verifier-Matrix-Tests.hs
  build-depends:       matrix
  type:                exitcode-stdio-1.0

test-suite verifier-matrixgate-tests
  import:              basic-unit-test-props
  main-is:             Verifier-MatrixGate-Tests.hs
  type:                exitcode-stdio-1.0

test-suite verifier-pec-tests
  import:              basic-unit-test-props
  main-is:             Verifier-PEC-Tests.hs
  type:                exitcode-stdio-1.0
